--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dibaca ya sayang...</title>
+    <title>Amplop Spesial untuk Bidadariku</title>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+
       :root {
         --primary: #01233e;
         --bg-color: rgb(6, 7, 42);
@@ -79,17 +81,16 @@
         text-align: center;
         transition: all 1s ease-in-out;
         box-shadow: 0 0 5px var(--shadow-color);
-        padding: 20px 10px;
+        padding: 0px 10px;
       }
 
       .envelope,
       .letter,
       .text {
-        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-          sans-serif;
+        font-family: "Quicksand", sans-serif;
         color: var(--txt-color);
         text-align: left;
-        font-size: 10px;
+        font-size: 5px;
       }
       .heart {
         position: absolute;
@@ -140,7 +141,7 @@
       }
 
       .love {
-        color: var(--heart-color);
+        color: var(--judul);
       }
 
       .jud {
@@ -154,16 +155,15 @@
         <div class="envelope">
           <div class="letter">
             <div class="text">
-              <p class="jud">Good Morning Sayang...</p>
               <div class="parag">
                 <p>
-                  Timakasi udah klik amplopnya sayaang, Ini ada sedikit cemilan
-                  buat pacarkuuu, Di mam yaa sayaang... supayaa pacarkuu ini
-                  semangaaat teyus kuliah nyaaa. Aku selalu ada di samping kamu
-                  sayang, jadi jangan pernah ngerasa sendirian yaaa,
-                  mmuuaachhh...
+                  Timakasi udah klik amplopnya sayaang, Kali ini aku mau bilang
+                  serius untuk kamu, dan ini belum pernah terucap dari mulut aku
+                  dan ketikan aku, tulus dari hati yang terdalam
                 </p>
-                <strong class="love">I Love You Cantiikk...</strong>
+                <strong class="love"
+                  >Terima Aku Jadi Pacarmu dan Jodohmu selamanya...</strong
+                >
               </div>
             </div>
           </div>
